<resources>
    <string name="app_name">Rideshare</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="vname">Vorname</string>
    <string name="nname">Nachname</string>
    <string name="street">Straße</string>
    <string name="hnr">Hausnummer</string>
    <string name="zipcode">PLZ</string>
    <string name="city">Stadt</string>
    <string name="email">Email</string>
    <string name="pword">Passwort</string>
    <string name="register">Registrieren</string>
    <string name="login">Login</string>
    <string name="update">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="searchStart">Startpunkt</string>
    <string name="searchEnd">Zielpunkt</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>

</resources>