<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <include layout="@layout/toolbar"/>


    <ImageView
        android:id="@+id/header_img"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#736E6E"/>

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name:"
        android:textSize="16sp"
        android:padding="10dp"
        android:id="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        android:drawableLeft="@drawable/ic_profile"
        android:drawablePadding="10dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_lin1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_lin2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vname"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/profile_vname"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nname"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/profile_nname"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Adresse:"
        android:textSize="16sp"
        android:padding="10dp"
        android:id="@+id/profile_adr"
        app:layout_constraintTop_toBottomOf="@+id/profile_lin1"
        android:drawableLeft="@drawable/ic_pin_person"
        android:drawablePadding="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_lin4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_lin5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/street"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/profile_address_str"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hnr"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/profile_address_nr"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_lin6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/zipcode"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/profile_address_plz"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/profile_address_city"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_lin8"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_mail"
            android:drawablePadding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="16sp"
            android:padding="20dp"
            android:id="@+id/profile_email"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:text="@string/logout"
        android:textSize="18sp"
        android:layout_gravity="center"/>


</LinearLayout>