<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">

        <include layout="@layout/toolbar" />

        <ImageView
            android:id="@+id/header_img"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/header_img"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/profile_vname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="10dp"
                android:hint="@string/vname"
                android:textSize="20sp"
                android:padding="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_img" />

            <EditText
                android:id="@+id/profile_nname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="10dp"
                android:hint="@string/nname"
                android:textSize="20sp"
                android:padding="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_vname" />

            <EditText
                android:id="@+id/profile_address_str"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="10dp"
                android:hint="@string/street"
                android:textSize="20sp"
                android:padding="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_nname" />

            <EditText
                android:id="@+id/profile_address_nr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="20dp"
                android:hint="@string/hnr"
                android:textSize="20sp"
                android:padding="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_address_str" />

            <EditText
                android:id="@+id/profile_address_plz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="10dp"
                android:hint="@string/zipcode"
                android:textSize="20sp"
                android:padding="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_address_nr" />

            <EditText
                android:id="@+id/profile_address_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="10dp"
                android:hint="@string/city"
                android:textSize="20sp"
                android:padding="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_address_plz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_profile_lin"
            app:layout_constraintTop_toBottomOf="@id/profile_address_city"
            android:padding="16dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/update_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Abbruch"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/update_btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>