<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Details zur Fahrt"
        android:gravity="center"
        android:id="@+id/detail_title"
        android:padding="20dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Von:"
        android:textSize="16sp"
        android:padding="10dp"
        android:id="@+id/detail_von"
        app:layout_constraintTop_toBottomOf="@+id/detail_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_lin1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_lin2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/street"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/detail_street_von"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hnr"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/detail_hnr_von"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_lin3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/zipcode"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/detail_zip_von"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/detail_city_von"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nach:"
        android:textSize="16sp"
        android:padding="10dp"
        android:id="@+id/detail_nach"
        app:layout_constraintTop_toBottomOf="@+id/detail_lin1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_lin4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_lin5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/street"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/detail_street_nach"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hnr"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/detail_hnr_nach"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_lin6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/zipcode"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/detail_zip_nach"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/detail_city_nach"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_lin7"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Datum:"
            android:textSize="16sp"
            android:padding="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="datum"
            android:textSize="16sp"
            android:padding="20dp"
            android:id="@+id/detail_date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Uhrzeit:"
            android:textSize="16sp"
            android:padding="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="uhrzeit"
            android:textSize="16sp"
            android:padding="20dp"
            android:id="@+id/detail_time"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_lin8"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fahrer:"
            android:textSize="16sp"
            android:padding="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="datum"
            android:textSize="16sp"
            android:padding="20dp"
            android:id="@+id/detail_vname"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="uhrzeit"
            android:textSize="16sp"
            android:padding="20dp"
            android:id="@+id/detail_nname"/>

    </LinearLayout>

</LinearLayout>